add media query for sp

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="all" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Learn2Code</title>
   </head>
   <body>
     <div class="header">
-      <img class="header__logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-      <ul class="header__list">
-        <li class="header__listItem">レッスン</li>
-        <li class="header__listItem">新規登録</li>
-        <li class="header__listItem">ログイン</li>
+      <div class="header__container">
+        <img class="header__logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <ul class="header__list">
+          <li class="header__listItem">レッスン</li>
+          <li class="header__listItem">新規登録</li>
+          <li class="header__listItem">ログイン</li>
+      </div>
       </ul>
     </div>
     <div class="main">
@@ -63,6 +67,7 @@
           <p class="lessons__lessonText">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
         </div>
       </div>
+      <div class="lessons__clear"></div>
     </div>
     <div class="start">
       <div class="start__container">
